# hks-meituan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.optimized  OPTIMIZATION_SUMMARY.md  README.md  agent_orchestration_flow.drawio  alembic.ini  alerts.yml  cityflow_architecture.drawio  cityflow_layers.drawio  cli_app.py  coverage.json  coverage.xml  debug_test.py  demo.sh  deploy.md  docker-compose.dev.yml  docker-compose.yml  docs_analysis.txt  eval_framework.py  expert_router_flow.drawio  filebeat.yml  gen_essay.py  grafana_dashboard.json  intent_parser_flow.drawio  problem_scenes_flow.drawio  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  synthesizer_time_flow.drawio  test_ab_full_details.txt  test_ab_report_30_scenarios.txt  (+23 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  quality.yml
.workbuddy/memory/: 2026-06-02.md  2026-06-03.md  MEMORY.md
alembic/: env.py  script.py.mako
alembic/versions/: 2026_05_09_0133_a1b2c3d4e5f6_add_audit_logs_table.py  2026_05_09_0200_b2c3d4e5f6a7_add_poi_table.py
backend/: __init__.py  api_spec.yaml  app_factory.py  config_loader.py  errors.py  lifespan.py  main.py  mock_server.py  openapi.py  requirements.txt  schemas.py
backend/agents/: __init__.py  graph.py  state.py  streaming.py
backend/agents_v2/: __init__.py  graph.py  state.py  streaming.py
backend/agents_v3/: __init__.py  graph.py  meituan_client.py  state.py  (+7 more)
docs/: .lee-spec-kit.json  ABC_comparison_report.md  API.md  DEVELOPMENT.md  DEVELOPMENT_DIARY.docx  DEVELOPMENT_DIARY.md  README.md  USER_JOURNEYS.md  agent_architecture.md  api_reference.md  architecture-and-optimization.md  architecture.md  architecture_annotated.md  c_version_architecture_diagnosis.md  c_version_bottleneck_diagnosis.md  c_version_diagnosis.md  c_version_node_diagnosis.md  cityflow-issues-and-solutions.md  diary_2026-05-17.md  failed_cases_analysis.md  fix_journal_20260601.md  flow-diagram.txt  harness_project.md  optimization_log.md  project_restructuring_plan.md  refactor-plan.md  task_assignment.md  项目重构分工与架构演进方案.md
eval_data/: llm_scenarios.json  perfect_scenarios.json  raw_S01.txt  raw_S02.txt  raw_S03.txt  raw_S04.txt  raw_S05.txt  report.json  results.json  results_66.json  scenarios.json  scenarios_quick.json
frontend/: fronted index..html  index.html  index.html.bak  index.html.bak2  test-l7.html  test-map.html
locales/: en_US.json  zh_CN.json
monitoring/: alert_rules.yml  alertmanager.yml  grafana_dashboard.json  prometheus.yml
nginx/: nginx.conf
paper/: cityflow.tex  main.tex  references.bib
scripts/: add_famous_pois.py  add_food_pois.py  add_food_pois_v2.py  check_performance.sh  debug_eval.py  demo_api.sh  demo_features.py  demo_performance.py  deploy-dev.sh  deploy.sh  enrich_poi_categories.py  enrich_poi_data.py  enrich_poi_scenes.py  eval_framework.py  gen_critical_gap_pois.py  gen_famous_pois.py  gen_golden_1000.py  gen_golden_cases.py  gen_missing_cats.py  gen_niche_pois.py  gen_scene_pois.py  gen_special_pois.py  gen_test_scenarios.py  gen_ugc_reviews.py  generate_docx.py  generate_docx_casual.py  generate_order.py  generate_road_traffic.py  import_poi_to_db.py  optuna_weights.py  rollback.sh  run_all_baselines.py  run_data_gen.ps1  run_llm_scoring.py  start.sh  start_dev.sh  start_prod.sh  start_test.sh  sync_emotion_tags.py  test_adjust_browser.py  (+9 more)
templates/: route_narrative.html
tests/: PERFORMANCE_REPORT.md  api_client.py  api_test_runner.py  conftest.py  conftest_db.py  debug_route.py  eval_result.json  factories.py  golden_cases.json  locustfile.py  optuna_result.json  run_api_tests.py  test_api_mock.py  test_arch_comparison.py  test_auth.py  test_benchmark.py  test_c_version.py  test_cache.py  test_cache_manager.py  test_cache_warmer.py  test_cache_warmup_new.py  test_changelog.py  test_config_hot_reload.py  test_config_validator.py  test_content_engine.py  test_coverage_tools.py  test_database.py  test_dependency_checker.py  test_diagnose.py  test_dialogue.py  test_dialogue_persistence.py  test_e2e_routes.py  test_economy.py  test_emotion_matrix.py  test_encryption.py  test_eval_variance.py  test_event_system.py  test_filters.py  test_full_eval.py  test_generator.py  (+36 more)
tui/: preference_chat.py
(+674 files in other folders)
