[project]
name = "cityflow"
version = "1.0.0"
description = "CityFlow - 智能城市出行规划系统"
requires-python = ">=3.12"
dependencies = [
    # Web框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # 数据处理
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    # LLM客户端
    "openai>=1.12.0",
    "httpx>=0.26.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # 缓存
    "redis[hiredis]>=5.0.0",
    # 认证
    "PyJWT>=2.8.0",
    # 加密
    "cryptography>=42.0.0",
    # 系统监控
    "psutil>=5.9.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=1.40.0",
    # 工具
    "rich>=13.7.0",
    # 配置热更新
    "watchdog>=4.0.0",
    "pyyaml>=6.0.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.200.0",
    # 模板引擎
    "Jinja2>=3.1.0",
    # 数据验证
    "jsonschema>=4.21.1",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.20.0",
    # 代码质量
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    # Pre-commit
    "pre-commit>=3.6.0",
]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = false

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # function call in default argument (FastAPI Depends)
    "SIM108",  # ternary operator (readability preference)
    "UP007",   # use X | Y for union types (already using in most places)
    "RUF001",  # ambiguous Unicode char (中文项目必须忽略)
    "RUF002",  # ambiguous Unicode char (中文项目必须忽略)
    "RUF003",  # ambiguous Unicode char (中文项目必须忽略)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM", "N"]
"scripts/*" = ["B", "SIM", "N"]
"backend/tools/*" = ["B", "SIM", "N"]
"alembic/versions/*" = ["TC003"]  # auto-generated migrations use typing at runtime

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend", "tests"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "redis", "httpx"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false  # 渐进式开启
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "backend.config.settings",
    "backend.config.__init__",
    "backend.errors",
    "backend.schemas",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "backend.tools.*",
    "backend.benchmarks.*",
    "scripts.*",
]
ignore_errors = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "llm: marks tests that require LLM service running",
]
